# genbank_seqkit

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
src/genbank_seqkit/: logger.py  main.py
src/tests/: test_main.py
src/utils/: _force_list.py  entrez_efetch.py  save_record_json.py
