[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "genbank_seqkit"
version = "0.1.0"
description = "A Python tool for fetching, parsing, and manipulating GenBank transcript records."
authors = [
    { name = "Rebekah Newman", email = "rebekah.s.newman@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]